v2.x-JIRAPLUGIN-298-TIMETARCKER_PERMISSIONS
Added Plugin and Timetracker permissons.

--- a/src/main/resources/css/jttp.css
+++ b/src/main/resources/css/jttp.css
@@ -67,7 +67,7 @@ cursor:pointer;
     padding:4px;
 }
 
-.analitics {
+.admin-border {
 	border-top: 1px solid #D2D2D2;
 	padding-bottom: 10px;
     padding-top: 20px;
